# url-shortener

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: rust.yml
src/: main.rs  utils.rs
