[package]
name = "url-shortener"
version = "1.1.4-r6"
edition = "2021"

[dependencies]
mongodb = { version = "2.0.1", features = ["async-std-runtime"], default-features = false }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
rocket = { version = "0.5.0-rc.1", features = ["json"]}
nanoid = "0.4.0"
dotenv = "0.15.0"
futures = "0.3.17"
async-std = "1.10.0"
lazy_static = "1.4.0"